Fix several bug - on resize slider bug - projects slide overlap with wrapper - hobbies section margin (forgot to delete)

--- a/css/query.css
+++ b/css/query.css
@@ -110,11 +110,6 @@
         font-size: 35%;
     }
 
-    .section--hobbies {
-        margin-right: 7.5%;
-        margin-left: 7.5%;
-    }
-
     .hobbies-img {
         width: 150px;
         height: 150px;
@@ -138,8 +133,8 @@
     }
 
     .hobbies-img {
-        width: 120px;
-        height: 120px;
+        width: 110px;
+        height: 110px;
     }
 }
 
@@ -149,8 +144,8 @@
     }
 
     .hobbies-img {
-        width: 115px;
-        height: 115px;
+        width: 100px;
+        height: 100px;
     }
 }
 
@@ -160,8 +155,8 @@
     }
 
     .hobbies-img {
-        width: 110px;
-        height: 110px;
+        width: 90px;
+        height: 90px;
     }
 }
 
