--- a/css/styles.css
+++ b/css/styles.css
@@ -146,8 +146,8 @@ body {
 
 .section--hobbies {
     align-items: center;
-    margin-right: 0 auto;
-    margin-left: 0 auto;
+    width: 60%;
+    margin: 0 auto;
     margin-top: 6rem;
     margin-bottom: 8rem;
 }
@@ -221,6 +221,7 @@ body {
 
 .section--projects {
     margin: 0 auto;
+    width: 100rem;
     margin-top: 6rem;
     margin-bottom: 8rem;
 }
